--- a/MinorProject/app/src/main/AndroidManifest.xml
+++ b/MinorProject/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MinorProject">
-        <activity android:name=".sentenceHandling.SentenceActivity"></activity>
+        <activity android:name=".utteranceHandling.UtteranceActivity"></activity>
+        <activity android:name=".sentenceHandling.SentenceActivity" />
         <activity android:name=".LoadFileActivity" />
         <activity android:name=".LoginHandling.NewUserActivity" />
         <activity
