--- a/MinorProject/app/src/main/AndroidManifest.xml
+++ b/MinorProject/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -12,9 +13,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MinorProject">
-        <activity android:name=".utteranceHandling.UtteranceActivity"></activity>
+        <activity android:name=".EndActivity"></activity>
+        <activity android:name=".utteranceHandling.UtteranceActivity" />
         <activity android:name=".sentenceHandling.SentenceActivity" />
-        <activity android:name=".LoadFileActivity" />
+        <activity android:name=".LoadFileActivity"
+            android:launchMode="singleInstance"/>
         <activity android:name=".LoginHandling.NewUserActivity" />
         <activity
             android:name=".LoginHandling.LoginActivity"
